syntax = "proto3";

package sci.v1;
option go_package = "github.com/substratusai/substratus/internal/sci";

service Controller {
  rpc CreateSignedURL(CreateSignedURLRequest) returns (CreateSignedURLResponse) {}
  rpc GetObjectMd5(GetObjectMd5Request) returns (GetObjectMd5Response) {}
  rpc BindIdentity(BindIdentityRequest) returns (BindIdentityResponse) {}
}

message BindIdentityRequest {
  string principal = 1; // the cloud identity (e.g. IAM principal) to bind
  string kubernetes_service_account = 2;
  string kubernetes_namespace = 3;
  string federated_oidc_provider = 4; // this is a URL that identifies the trusted OIDC provider for the originating identity (KSA)
}

message BindIdentityResponse {}

message CreateSignedURLRequest {
  string bucketName = 1;
  string objectName = 2;
  int64 expirationSeconds = 3;
  string md5checksum = 4;
}

message CreateSignedURLResponse {
  string url = 1;
}

message GetObjectMd5Request {
  string bucketName = 1;
  string objectName = 2;
}

message GetObjectMd5Response {
  string md5checksum = 1;
}
